@@ -182,18 +182,18 @@ static kindOption SqlKinds [] = {
     { FALSE, 'l', "local",        "local variables"        },
     { TRUE,  'L', "label",        "block label"            },
     { TRUE,  'P', "package",      "packages"	           },
-    { TRUE,  'p', "procedure",    "procedures"  	   },
+    { TRUE,  'n', "namespace",    "procedures"  	   },
     { FALSE, 'r', "record",       "records"     	   },
     { TRUE,  's', "subtype",      "subtypes"    	   },
-    { TRUE,  't', "table",        "tables"		   },
-    { TRUE,  'T', "trigger",      "triggers"	           },
+    { TRUE,  't', "class",        "tables"		   },
+    { TRUE,  'T', "macro",        "triggers"	           },
     { TRUE,  'v', "variable",     "variables"   	   },
-    { TRUE,  'i', "index",        "indexes"     	   },
+    { TRUE,  'i', "struct",       "indexes"     	   },
     { TRUE,  'e', "event",        "events"	           },
     { TRUE,  'U', "publication",  "publications"           },
     { TRUE,  'R', "service",      "services"               },
     { TRUE,  'D', "domain",       "domains"                },
-    { TRUE,  'V', "view",         "views"                  },
+    { TRUE,  'm', "member",       "views"                  },
     { TRUE,  'n', "synonym",      "synonyms"               },
     { TRUE,  'x', "mltable",      "MobiLink Table Scripts" },
     { TRUE,  'y', "mlconn",       "MobiLink Conn Scripts"  }
